# 3DShock

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: compile.yml
resources/: AppInfo  banner.png.kra
source/: camera.cpp  camera.hpp  creds.h  main.c  main.cpp  main.h  network.cpp  network.hpp
source/ui/: main_screen.cpp  main_screen.h  settings_screen.cpp  settings_screen.h  ui_components.cpp  ui_components.h  ui_screen.cpp  ui_screen.h
